--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
